--- a/content/4.Semester/4.Semester.md
+++ b/content/4.Semester/4.Semester.md
@@ -4,7 +4,7 @@ tags:
   - 4semester
 fach:
 date created: Monday, 15. April 2024, 12:01
-date modified: Monday, 3. June 2024, 19:50
+date modified: Tuesday, 11. June 2024, 21:37
 ---
 
 # Modules
@@ -24,9 +24,9 @@ date modified: Monday, 3. June 2024, 19:50
 
 I am currently unsure which of the bottom four modules I will ultimately choose. They are likely to be updated in the first few weeks of the 4th semester, after which three of them will become deprecated and I will choose one:
 
-- [[BaySta|Einführung in die Bayes-Statistik]] (BaysSta got selected)
+- [[BaySta|Einführung in die Bayes-Statistik]]
 - [[LiMo]]
-- [[I2ML]]
+- [[I2ML]] (not selected)
 
 These updates are intended to provide the most current and relevant content. I will make my decision based on these updates and the modules' relevance to my future studies.
 
@@ -36,11 +36,11 @@ These updates are intended to provide the most current and relevant content. I w
 <div id="disqus_thread"></div>
 <script>
     /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables */
     /*
     var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
     */
