--- a/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-7-VL/FSK-7VL-04-06-2024.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-7-VL/FSK-7VL-04-06-2024.md
@@ -7,7 +7,7 @@ fach: "[[Formale Sprachen und Komplexität (FSK)]]"
 Thema:
 Benötigte Zeit:
 date created: Tuesday, 4. June 2024, 11:49
-date modified: Wednesday, 5. June 2024, 19:45
+date modified: Tuesday, 11. June 2024, 20:32
 ---
 
 # Themen
@@ -16,7 +16,7 @@ date modified: Wednesday, 5. June 2024, 19:45
 - 7b: Deterministische Kellerautomaten
 - 7c: Turingmaschienen
 
-# VL 0-7a Äquivalenz von kontextfreien Sprachen und von [[Kellerautomaten]]
+# VL-07a Äquivalenz von kontextfreien Sprachen und von [[Kellerautomaten]]
 
 ## [Wiederholung (SimpleClub Video empfehlenswert für grobes Verständnis)](https://www.youtube.com/watch?v=R86rOalCYCc&ab_channel=Informatik-simpleclub)
 
@@ -56,13 +56,13 @@ $$
 
 ### Äquivalenz von kontextfreien Sprachen und von Kellerautomaten S.14
 
-# VL 7-b DPDAs
+# VL07-b DPDAs
 
 ## DPDA brauchen keinen Müllzustand
 
 ## DPDAs effizientes Parsing
 
-# VL 3-c Turingmaschinen
+# VL-07c Turingmaschinen
 
 f
 
@@ -72,11 +72,11 @@ f
 <div id="disqus_thread"></div>
 <script>
     /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables */
     /*
     var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
     */
