--- a/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-8-VL/FSK-8VL-11-06-2024.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-8-VL/FSK-8VL-11-06-2024.md
@@ -7,8 +7,10 @@ fach: "[[Formale Sprachen und Komplexität (FSK)]]"
 Thema:
 Benötigte Zeit:
 date created: Tuesday, 11. June 2024, 18:47
-date modified: Tuesday, 11. June 2024, 20:22
+date modified: Tuesday, 11. June 2024, 21:35
 ---
+
+> [!warning] Diese Zusammenfassung basiert auf den VL Videos vom 14.06, diese ist jedoch nicht ganz übereinstimmend mit der VL 8
 
 > [!summary] Zusammenfassung Vorabzusammenfassung
 >
