Quartz sync: Jun 24, 2024, 4:11 PM

--- a/content/4.Semester/4.Semester.md
+++ b/content/4.Semester/4.Semester.md
@@ -4,7 +4,7 @@ tags:
   - 4semester
 fach:
 date created: Monday, 15. April 2024, 12:01
-date modified: Tuesday, 11. June 2024, 21:37
+date modified: Monday, 24. June 2024, 16:10
 ---
 
 # Modules
@@ -13,12 +13,13 @@ date modified: Tuesday, 11. June 2024, 21:37
 
 - [[Formale Sprachen und Komplexität (FSK)|FSK (Formale Sprachen und Komplexität)]] (in work)
 - [[Rechnernetze und Verteilte Systeme (RNVS)|RNVS (Rechnernetze und Verteilte Systeme)]] (in work)
-- [[IT-Kompetenz]] (done)
+- IT-Kompetenz (done)
 - [[Bachelorseminar-Software Security]] (in work)
 
 ## Statistic Modules
 
 - [[BaySta]]
+- [[LiMo]] (in planning)
 
 ### Selectable Modules for Statistics
 
@@ -28,7 +29,7 @@ I am currently unsure which of the bottom four modules I will ultimately choose.
 - [[LiMo]]
 - [[I2ML]] (not selected)
 
-These updates are intended to provide the most current and relevant content. I will make my decision based on these updates and the modules' relevance to my future studies.
+These updates are intended to provide the most current and relevant content. I will make my decision based on these updates and the modules' relevance to my future studies. Currently `BaySta` is the selected one, but I plan on taking the `LiMo` Exam and therefore add notes for it here. I am not sure if I have the time to take well care of `LiMo notes`, as it was a spontaneous decision and I did not take the course over the semester.
 
 <!-- DISQUS SCRIPT COMMENT START -->
 
