Quartz sync: Jul 3, 2024, 1:53 PM

--- a/content/4.Semester/Statistik/LiMo/Vorlesung/1.VL/LiMo-1VL-15-04-24.md
+++ b/content/4.Semester/Statistik/LiMo/Vorlesung/1.VL/LiMo-1VL-15-04-24.md
@@ -4,7 +4,7 @@ tags:
   - "#statistik"
 fach:
 date created: Monday, 15. April 2024, 12:13
-date modified: Tuesday, 16. April 2024, 11:12
+date modified: Wednesday, 3. July 2024, 12:38
 ---
 
 Is in List with Statistic courses
@@ -18,7 +18,7 @@ Is in List with Statistic courses
   **Was wir gemacht haben in der ersten VL:**
 - Beispiele zu verschiedenen Beispielen wo regression gebraucht wird
 
-## Zusammenfassung
+# Zusammenfassung
 
 - Wir wollen einen Zusammenhang zwischen einer Zielgröße Y und Einflussgrößen x modellieren
 - Ziele sind Verstehen, Nachweisen, Prognostizieren
@@ -84,11 +84,11 @@ Letze Seite: 20
 <div id="disqus_thread"></div>
 <script>
     /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables */
     /*
     var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
     */
