Quartz sync: Jul 3, 2024, 2:13 PM

--- a/content/4.Semester/4.Semester.md
+++ b/content/4.Semester/4.Semester.md
@@ -4,7 +4,7 @@ tags:
   - 4semester
 fach:
 date created: Monday, 15. April 2024, 12:01
-date modified: Tuesday, 2. July 2024, 18:10
+date modified: Wednesday, 3. July 2024, 14:02
 ---
 
 # Modules
@@ -14,7 +14,7 @@ date modified: Tuesday, 2. July 2024, 18:10
 - [[Formale Sprachen und Komplexität (FSK)|FSK (Formale Sprachen und Komplexität)]] (in work)
 - [[Rechnernetze und Verteilte Systeme (RNVS)|RNVS (Rechnernetze und Verteilte Systeme)]] (in work)
 - IT-Kompetenz (done)
-- [[Bachelorseminar-Software Security]] (in work)
+- Bachelorseminar (done)
 
 ## Statistic Modules
 
@@ -27,7 +27,6 @@ I am currently unsure which of the bottom four modules I will ultimately choose.
 
 - [[BaySta|Einführung in die Bayes-Statistik]]
 - [[LiMo]]
-- [[I2ML]] (not selected)
 
 These updates are intended to provide the most current and relevant content. I will make my decision based on these updates and the modules' relevance to my future studies. Currently `BaySta` is the selected one, but I plan on taking the `LiMo` Exam and therefore add notes for it here. I am not sure if I have the time to take well care of `LiMo notes`, as it was a spontaneous decision and I did not take the course over the semester.
 
