Quartz sync: Jul 6, 2024, 3:19 AM

--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-12VL-05-07-2024/RNVS-12VL-05-07-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-12VL-05-07-2024/RNVS-12VL-05-07-2024.md
@@ -6,6 +6,8 @@ tags:
 fach: "[[Rechnernetze und Verteilte Systeme (RNVS)]]"
 Thema:
 Benötigte Zeit:
+date created: Saturday, 6. July 2024, 01:46
+date modified: Saturday, 6. July 2024, 03:16
 ---
 
 # Zusammenfassung des Vorlesungstranskripts: Fehlerkorrektur und DNS-Systeme
@@ -126,11 +128,11 @@ Die Vorlesung schließt mit einem Ausblick auf zukünftige Themen und einer kurz
 <div id="disqus_thread"></div>
 <script>
     /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables */
     /*
     var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
     */
