Quartz sync: Jul 15, 2024, 11:20 PM

--- a/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-4-VL/FSK-4VL-07-05-24.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-4-VL/FSK-4VL-07-05-24.md
@@ -10,7 +10,7 @@ date created: Tuesday, 7. May 2024, 14:22
 date modified: Monday, 27. May 2024, 21:12
 ---
 
-- [ ] Übersetzung von verschiedenen Formalisten Klausurrelevant
+- [x] Übersetzung von verschiedenen Formalisten Klausurrelevant [completion:: 2024-07-15]
 
 # VL-04a
 
