--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-2VL-26-04-2024/RNVS-2VL-26-04-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-2VL-26-04-2024/RNVS-2VL-26-04-2024.md
@@ -255,7 +255,7 @@ graph TD;
     Datenuebertragung -->|Bitübertragung| End
 ```
 
-- [ ] Richtiges diagramm aus S.88
+- [x] Richtiges diagramm aus S.88 [completion:: 2024-07-15]
 
 ```mermaid
 graph TD;
