--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-4VL-10-05-2024/RNVS-4VL-10-05-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-4VL-10-05-2024/RNVS-4VL-10-05-2024.md
@@ -224,7 +224,7 @@ Ab hier folgen Notizen aus der Vorlesung
 
 Einstieg: S.162 Kapitel 2
 
-- [ ] Jupyter Notebook rumspielen
+- [x] Jupyter Notebook rumspielen [completion:: 2024-07-15]
 - [ ] Fragen aus S.176 und 177 lesen, beantworten und verstehen
 
 Kapitel 3 einstieg
