Quartz sync: Oct 15, 2024, 10:00 PM

--- a/content/4.Semester/Informatik/NaCo/Exam - 2022.md
+++ b/content/4.Semester/Informatik/NaCo/Exam - 2022.md
@@ -1,6 +1,6 @@
 ---
 date created: Tuesday, 15. October 2024, 15:40
-date modified: Tuesday, 15. October 2024, 17:18
+date modified: Tuesday, 15. October 2024, 19:02
 ---
 
 # Aufgabe 1: General Knowledge / Multiple Choice (10 Punkte)
@@ -687,12 +687,17 @@ Die Funktion `unknown_operator` erzeugt durch die zufällige Auswahl von Werten 
 
 ```python
 def mutate(individual):
-    index = round(random.random() * len(individual))  # Pick a random index
-    if random.random() < 0.5:  # Randomly increase or decrease the value
-        individual[index] += 1
+    # Wähle einen zufälligen Index in der Liste
+    index = round(random.random() * len(individual))
+
+    # Entscheide zufällig, ob der Wert an diesem Index erhöht oder verringert wird
+    if random.random() < 0.5:
+        individual[index] += 1  # Erhöhe den Wert an dem ausgewählten Index
     else:
-        individual[index] -= 1
+        individual[index] -= 1  # Verringere den Wert an dem ausgewählten Index
+
     return individual
+
 ```
 
 ### Erklärung:
@@ -790,11 +795,11 @@ comments powered by Disqus.
 <div id="disqus_thread"></div>
 <script>
     /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables */
     /*
     var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
     */
