Quartz sync: Oct 22, 2024, 1:40 PM

--- a/content/5.Semester/JurIT/VL/2.VL/2. VL Juristisches IT-Projektmanagement 22.10.2022.md
+++ b/content/5.Semester/JurIT/VL/2.VL/2. VL Juristisches IT-Projektmanagement 22.10.2022.md
@@ -1,9 +1,16 @@
 ---
-date created: Monday, 21. October 2024, 14:07
-date modified: Tuesday, 22. October 2024, 07:58
+tags:
+  - 5semester
+  - JurIT
+  - informatik
+fach: "[[Juristisches IT-Projektmanagement]]"
+Thema:
+Benötigte Zeit:
+date created: Tuesday, 22. October 2024, 07:58
+date modified: Tuesday, 22. October 2024, 08:01
 ---
 
-- [[JurIT-Vorlesungen]]
+_Start:_ Folie 12
 
 <!-- DISQUS SCRIPT COMMENT START -->
 
@@ -31,11 +38,11 @@ comments powered by Disqus.
 <div id="disqus_thread"></div>
 <script>
     /**
-    * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables */
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
     /*
     var disqus_config = function () {
-    this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
     */
